hphp/test/slow/sealed/sealed_classes12.php.expectf
Fatal error: Class undefined: Class2 in %s/test/slow/sealed/sealed_classes12.php on line 16
